refactor: replace getFirst() with get(0) in test cases